--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,9 @@ pygments: true
 safe: true
 auto: false 
 
-paginate: 8
-paginate_path: "page:num"
+paginator: paginate
+paginate: 5
+paginate_path: "blog/page:num"
 
 # presonal config
 domain: blog.hipoplar.me
