--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-markdown: redcarpet
 permalink: :year/:month/:title.html
 url: 
 lsi: false
-pygments: true
 safe: true
 auto: false 
 
@@ -11,8 +9,8 @@ paginate: 5
 paginate_path: "blog/page:num"
 
 # presonal config
-domain: blog.hipoplar.me
-title: Hipoplar
+domain: hipopulus.cn
+title: Hi Populus
 description: iOS, Ruby, Java Web, Linux, PHP, Javascript...
 author: Vincent Yang
 email: soda1015@foxmail.com
