update config Update 2015-06-08-css-animation.md add a icon add a icon

--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ paginate_path: "blog/page:num"
 # presonal config
 domain: hipopulus.cn
 title: Hi Populus
-description: iOS, Ruby, Java Web, Linux, PHP, Javascript...
-author: Vincent Yang
+description:
+author: Vince.Y
 email: soda1015@foxmail.com
-github: soda1015
+github: hipopulus
 
 config:
   js_dir:
